# master-thesis

./: .gitignore  Makefile  Master Thesis.postman_collection.json  docker-compose-env.yml
.obsidian/: community-plugins.json  graph.json  workspace.json
.obsidian/plugins/recent-files-obsidian/: data.json
Chapters/: Conclusions.md  Ideas.md  Literature.md  Tests.md  Theory.md
assets/: lower_die.vtk
master-thesis-api/: Dockerfile
master-thesis-api/prisma/: schema.prisma
master-thesis-api/src/: app.controller.ts
master-thesis-api/src/blob-storage/: blob-storage.module.ts  blob-storage.service.ts
master-thesis-api/src/common/: kafka.ts  ws.ts
master-thesis-api/src/db-client/: db-client.module.ts
master-thesis-api/src/file/: file.controller.ts  file.module.ts  file.service.ts
master-thesis-api/src/kafka/: kafka.module.ts
master-thesis-api/src/mesh-api/: mesh-api.service.ts
master-thesis-frontend-ts/: package.json
master-thesis-frontend-ts/src/: App.tsx  index.css  main.tsx
master-thesis-mesh-service/: go.sum  main.go
master-thesis-wasm/: Cargo.toml
master-thesis-wasm/src/: lib.rs
obsidian/: Overview.md
obsidian/.obsidian/: bookmarks.json  workspace.json
obsidian/Chapters/: Abstract.md  Ideas.md  Implementation.md  Theory.md
src/: .gitignore  docker-compose-full.yml  docker-compose.yml
src/assets/: billet.vtk
src/master-thesis-api/: Dockerfile  package-lock.json  package.json
src/master-thesis-frontend-ts/: .eslintrc.cjs  index.html  package-lock.json  package.json
src/master-thesis-mesh-service/: go.mod  main.go
(+105 files in other folders)
