[package]
name = "master-thesis-wasm"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
] }
js-sys = "0.3"
three = "0.4"
yew = "0.21.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
